# DocsRay

./: .github  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.full  README.md  entrypoint.sh  mteb_embedding.py  pyproject.toml  requirements.txt  setup.py  smithery.yaml  test_mcp.py
.github/workflows/: python-publish.yml
docsray/: .dockerignore  Dockerfile  __init__.py  app.py  auto_restart.py  chatbot.py  cli.py  config.py  download_models.py  mcp_server.py  post_install.py  smithery.yaml  web_demo.py
docsray/inference/: embedding_model.py  gemma3_handler.py  llm_model.py
docsray/scripts/: build_index.py  file_converter.py  pdf_extractor.py  section_rep_builder.py
docsray/search/: section_coarse_search.py
docsray/utils/: wrappers.py
tests/: __init__.py
