[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsray"
version = "0.1.0"
description = "PDF Question-Answering System with MCP Integration"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"  # 수정: text 대신 string으로
authors = [
    {name = "Taehoon Kim", email = "taehoonkim@sogang.ac.kr"},
]
keywords = ["pdf", "rag", "mcp", "llm", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]  # 추가: dynamic 설정

[project.scripts]  # 추가: entry points를 여기에 정의
docsray = "docsray.cli:main"
docsray-mcp = "docsray.mcp_server:main"
docsray-web = "docsray.web_demo:main"
docsray-api = "docsray.app:main"
docsray-download-models = "docsray.download_models:main"

[project.urls]
Homepage = "https://github.com/MIMICLab/DocsRay"
Documentation = "https://github.com/MIMICLab/DocsRay/blob/main/README.md"
Repository = "https://github.com/MIMICLab/DocsRay"
Issues = "https://github.com/MIMICLab/DocsRay/issues"

[tool.setuptools.packages.find]
include = ["docsray*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}