[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsray"
version = "1.0.1"
description = "PDF Question-Answering System with MCP Integration"
authors = [{name = "Taehoon Kim", email = "taehoonkim@sogang.ac.kr"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://docsray.com"
Repository = "https://github.com/MIMICLab/DocsRay"
Documentation = "https://github.com/MIMICLab/DocsRay/blob/main/README.md"

[project.scripts]
docsray = "docsray.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docsray*"]

[tool.setuptools.package-data]
docsray = ["data/*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}